--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 			<scope>test</scope>
 			<version>4.11</version>
 		</dependency>
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
 	</dependencies>
-
+	
 </project>
